feat: improve error logging in CheckoutController and refactor campaign handling